feat: add chunked minifig import
